--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,6 @@
     "Тестовый пример": "test example",
     "Перевод": "translate",
     "Главная": "main page",
-    "Язык": "English"
+    "Язык": "English",
+    "Страница не найдена": "page not found"
 }
