--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,8 @@
     "Перевод": "Перевод",
     "Главная": "Главная страница",
     "Язык": "Русский",
-    "Страница не найдена": "Страница не найдена"
+    "Страница не найдена": "Страница не найдена",
+    "Произошла ошибка": "Произошла ошибка",
+    "Обновить страницу": "Обновить страницу",
+    "Вызвать ошибку": "Вызвать ошибку"
 }
